Archive2/9b/56db22916f2a64/output
main.cpp:1:1: error: unknown type name 'scene'
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ -25, 25, 0 + 10 }, Vec3<double>{ 50, 0, 0 }, Vec3<double>{ 0, -50, 0 }, Vec3<double>{ 0, 0, 1 })); // Front
^
main.cpp:1:6: error: cannot use arrow operator on a type
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ -25, 25, 0 + 10 }, Vec3<double>{ 50, 0, 0 }, Vec3<double>{ 0, -50, 0 }, Vec3<double>{ 0, 0, 1 })); // Front
     ^
main.cpp:2:1: error: unknown type name 'scene'
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ -25 - 10, 25, 0 }, Vec3<double>{ 0, 0, -50 }, Vec3<double>{ 0, -50, 0 }, Vec3<double>{ 1, 0, 0 })); // Left
^
main.cpp:2:6: error: cannot use arrow operator on a type
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ -25 - 10, 25, 0 }, Vec3<double>{ 0, 0, -50 }, Vec3<double>{ 0, -50, 0 }, Vec3<double>{ 1, 0, 0 })); // Left
     ^
main.cpp:3:1: error: unknown type name 'scene'
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ -25, 25 + 10, 0 }, Vec3<double>{ 0, 0, -50 }, Vec3<double>{ 50, 0, 0 }, Vec3<double>{ 0, -1, 0 })); // Top
^
main.cpp:3:6: error: cannot use arrow operator on a type
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ -25, 25 + 10, 0 }, Vec3<double>{ 0, 0, -50 }, Vec3<double>{ 50, 0, 0 }, Vec3<double>{ 0, -1, 0 })); // Top
     ^
main.cpp:5:1: error: unknown type name 'scene'
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ 25, -25, -50 - 10 }, Vec3<double>{ -50, 0, 0 }, Vec3<double>{ 0, 50, 0 }, Vec3<double>{ 0, 0, -1 })); // Back
^
main.cpp:5:6: error: cannot use arrow operator on a type
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ 25, -25, -50 - 10 }, Vec3<double>{ -50, 0, 0 }, Vec3<double>{ 0, 50, 0 }, Vec3<double>{ 0, 0, -1 })); // Back
     ^
main.cpp:6:1: error: unknown type name 'scene'
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ 25 + 10, -25, -50 }, Vec3<double>{ 0, 50, 0 }, Vec3<double>{ 0, 0, 50 }, Vec3<double>{ -1, 0, 0 })); // Right
^
main.cpp:6:6: error: cannot use arrow operator on a type
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ 25 + 10, -25, -50 }, Vec3<double>{ 0, 50, 0 }, Vec3<double>{ 0, 0, 50 }, Vec3<double>{ -1, 0, 0 })); // Right
     ^
main.cpp:7:1: error: unknown type name 'scene'
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ 25, -25 - 10, -50 }, Vec3<double>{ -50, 0, 0 }, Vec3<double>{ 0, 0, 50 }, Vec3<double>{ 0, 1, 0 })); // Bottom
^
main.cpp:7:6: error: cannot use arrow operator on a type
scene->addToScene(make_unique<Rectangle>(Vec3<double>{ 25, -25 - 10, -50 }, Vec3<double>{ -50, 0, 0 }, Vec3<double>{ 0, 0, 50 }, Vec3<double>{ 0, 1, 0 })); // Bottom
     ^
12 errors generated.
